--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     <div class="team-container">
         <!-- President -->
         <div class="team-row">
-            <div class="team-member">
+            <div class="team-member", class="president">
                 <img src="photos/MEMBERS/koushik.jpg" alt="President" class="sr-lead">
                 <h4 title="President"> M. Koushik <br> President</h4>
             </div>
@@ -153,21 +153,21 @@
         <br><br><br><br><hr color="white" width="80%"><br><br><br><br>
         <!-- Vice Presidents -->
         <div class="team-row">
-            <div class="team-member">
+            <div class="team-member" class="Vice Presidents">
                 <img src="photos/MEMBERS/meghana.jpg" alt="Vice President PR" class="sr-lead">
                 <h4>Meghana <br> Vice President <br>    PR</h4>
             </div>
-            <div class="team-member">
+            <div class="team-member" class="Vice Presidents">
                 <img src="photos/MEMBERS/sailaja.jpg" alt="Vice President Education" class="sr-lead">
                 <h4>Durga Sailaja <br>Vice President <br>Education</h4>
             </div>
-            <div class="team-member">
+            <div class="team-member" class="Vice Presidents">
                 <img src="photos/MEMBERS/kanishk.jpg" alt="Vice President Membership" class="sr-lead">
                 <h4>kanishk <br> Vice President <br> Membership</h4>
             </div>
         </div>
 
-        <br><br><br><br><hr class="line" color="white" width="80%"><br><br><br><br>
+        <br><br><br><br><br><br><br><br>
         <!-- Other Members -->
         <div class="team-row">
             <div class="team-member">
@@ -188,7 +188,7 @@
             </div>
         </div>
 
-        <br><br><br><br><hr class="line" color="white" width="80%"><br><br><br><br>
+        <br><br><br><br><br><br><br><br>
         <!-- New Members Row -->
         <div class="team-row">
             <div class="team-member">
